# logic-grid-project

./: .gitignore  CMakeLists.txt  README.md
docs/: checkpoint2_plan.md  checkpoint2_reflection.md  checkpoint2_tests.md
include/: Cell.h  Game.h  HintSystem.h  Puzzle.h  Solver.h
src/: Cell.cpp  Game.cpp  HintSystem.cpp  Puzzle.cpp  main.cpp
tests/: test_no_mistakes.cpp  test_row_duplicate.cpp  test_subgrid_duplicate.cpp
